# intel-ai-assistant-builder

./: README.md
example/: README.md
example/csharp/CSharpClientExample/: Program.cs
mcp/: DEBUGGING_GUIDE.md  GENERATED_MCP_SERVERS.md  OPEN_SOURCE_MCP_SERVERS.md  README.md
mcp/mcp_servers/mcp_mind_map_legacy/: requirements.txt
src/superbuilderclient/: package-lock.json  package.json
src/superbuilderclient/public/: config.default.json
src/superbuilderclient/public/locales/en/: translation.json
src/superbuilderclient/public/locales/ja-JP/: translation.json
src/superbuilderclient/public/locales/zh-Hans/: translation.json
src/superbuilderclient/public/locales/zh-Hant/: translation.json
src/superbuilderclient/src/: i18n.jsx  main.jsx
src/superbuilderclient/src-tauri/: Cargo.toml  tauri.conf.json
src/superbuilderclient/src-tauri/capabilities/: default.json
src/superbuilderclient/src-tauri/src/: grpc_client.rs  lib.rs
src/superbuilderclient/src/components/: App.css
src/superbuilderclient/src/components/FluidModal/: FluidModal.css
src/superbuilderclient/src/components/accordion/: SimpleAccordion.css  SimpleAccordion.jsx
src/superbuilderclient/src/components/chat/: Chat.css  ChatInput.jsx
src/superbuilderclient/src/components/context/: AppStatusContext.jsx  FileManagementContext.jsx
src/superbuilderclient/src/components/dragAndDrop/: DragAndDrop.css
src/superbuilderclient/src/components/email/: Email.css  EmailWindow.jsx
src/superbuilderclient/src/components/fileManagement/: ActiveFileView.css  ActiveFileView.jsx  FileTable.jsx
src/superbuilderclient/src/components/generalUseModal/: generalUseModal.css
src/superbuilderclient/src/components/mcpManagement/: McpAgentTable.jsx  McpManagement.css  McpManagement.jsx  McpMarketPlace.README.md  McpMarketPlace.css  McpMarketPlace.jsx  McpServerTable.css  McpServerTable.jsx  mcpTableShared.jsx
src/superbuilderclient/src/components/modelConversion/: ModelConversion.css  ModelConversion.jsx  ModelConversionWindow.jsx
src/superbuilderclient/src/components/modelDownloader/: DownloadBody.css  DownloadBody.jsx  modelDownloader.css
src/superbuilderclient/src/components/setting/: ModelSettings.css  Setting.css  Setting.jsx  SystemInfo.jsx
src/superbuilderclient/src/components/sidebar/: ChatHistory.css  Sidebar.jsx  SidebarOverlay.css
src/superbuilderclient/src/stores/: McpStore.jsx
src/superbuilderclient/src/utils/: mcpCache.js
(+7 files in other folders)
